updated the previous code

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-API_KEY2 = "AIzaSyDImruvkaihoQmbVBPbUyX9_MQxD9OsORo"  
-API_KEY = "AIzaSyDnWkgu1dVleOPAfw1urFfv1k7PLb7IKWc"
+API_KEY=AIzaSyCWCTP0J9TuUSBoc5H3EEN15sI20HJa-Us
